--- a/one.html
+++ b/one.html
@@ -2,7 +2,7 @@
 <head>
     <link rel="icon" href="favico.ico" type="image/x-icon">
     <link rel="stylesheet" href="MC.css">
-<title>Merry Christmas</title>
+<title>Happpy New Year</title>
 </head>
 <body class="onmag">
 <div class="on">
